# lambda-idioms

./: .gitignore  CMakeLists.txt
src/: main.cpp
